--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@react-navigation/stack": "^6.4.1",
     "@tanstack/react-query": "^5.59.0",
     "expo": "~51.0.28",
+    "expo-clipboard": "^6.0.3",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.9",
     "expo-linking": "~6.3.1",
